# meshtastic-hermes-plugin

./: .gitignore  Justfile  README.md  flake.nix  pyproject.toml
docs/: architecture.md  usage.md
meshtastic_hermes/: __init__.py  __main__.py  connection.py  gateway_bridge.py  knowledge.py  observer.py  plugin.yaml  schemas.py  tools.py
meshtastic_hermes/skills/mesh-recon/: SKILL.md
meshtastic_hermes/skills/messaging-safety/: SKILL.md
meshtastic_platform/: __init__.py  adapter.py  plugin.yaml
meshtastic_platform/skills/mesh-responder/: SKILL.md
tests/: conftest.py  test_gateway_bridge.py  test_knowledge.py  test_observer.py  test_platform.py  test_skills.py  test_standalone.py  test_tools.py
